f-common: fix emoji picker z-index

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -20,3 +20,6 @@ form, .form-fields-wrapper
   flex-flow: column
   gap: 16px
 
+.emoji-picker__wrapper
+  z-index: 10000
+
